Added several required dependencies